[gd_scene load_steps=2 format=3 uid="uid://df3t3dwnccctd"]

[ext_resource type="Script" uid="uid://b68ju1s3laic4" path="res://slices/run/states/map/scenes/map_node.gd" id="1_m7b6f"]

[node name="MapNode" type="ColorRect"]
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_m7b6f")

[node name="ParentLineHolder" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2

[node name="ChildrenLineHolder" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
